[LoadTest] Revamp load test suite (#1002)
## Summary

This pull request includes several updates to the load-testing
configuration and test files, as well as improvements to the relay
stress test suite. The most important changes include updating funding
account addresses, modifying gateway configurations, and refactoring
various test functions for better accuracy.

## Type of change

Select one or more from the following:

- [ ] New feature, functionality or library
- [ ] Consensus breaking; add the `consensus-breaking` label if so. See
#791 for details
- [x] Bug fix
- [ ] Code health or cleanup
- [ ] Documentation
- [ ] Other (specify)

## Testing

- [x] **Unit Tests**: `make go_develop_and_test`
- [x] **LocalNet E2E Tests**: `make test_e2e`
- [ ] **DevNet E2E Tests**: Add the `devnet-test-e2e` label to the PR.

## Sanity Checklist

- [x] I have tested my changes using the available tooling
- [ ] I have commented my code
- [x] I have performed a self-review of my own code; both comments &
source code
- [ ] I create and reference any new tickets, if applicable
- [ ] I have left TODOs throughout the codebase, if applicable

--- a/load-testing/loadtest_manifest_example.yaml
+++ b/load-testing/loadtest_manifest_example.yaml
@@ -2,16 +2,16 @@
 # It is intended to target a remote environment, such as a devnet or testnet.
 is_ephemeral_chain: false
 
-# testnet_node is the URL of the node that the load test will use to query the
+# rpc_node is the URL of the RPC node that the load test will use to query the
 # chain and submit transactions.
-testnet_node: https://devnet-sophon-validator-rpc.poktroll.com
+rpc_node: https://devnet-sophon-validator-rpc.poktroll.com
 
 # The service ID to request relays from.
 service_id: "anvil"
 
 # The address of the account that will be used to fund the application accounts
-# so that they can stake on the network.
-funding_account_address: pokt1awtlw5sjmw2f5lgj8ekdkaqezphgz88rdk93sk # address for faucet account
+# so that they can stake on the local network.
+funding_account_address: pokt1eeeksh2tvkh7wzmfrljnhw4wrhs55lcuvmekkw # address for faucet account
 
 # In non-ephemeral chains, the gateways are identified by their address.
 gateways:
