[RelayMiner] Allow big transactions simulation (#1027)
## Summary

This pull request includes changes to support larger proof transactions
by increasing the maximum allowed sizes for RPC and mempool, and by
adjusting the gRPC client configuration.

## Issue

`RelayMiner`s simulate and broadcast transaction with multiple proofs
that tend to be too large than the default gRPC client's
`MaxCall{Send,Recv}MsgSize`.


![image](https://github.com/user-attachments/assets/e9d57be0-07c8-498e-9494-50b18a1fbf49)

## Type of change

Select one or more from the following:

- [ ] New feature, functionality or library
- [ ] Consensus breaking; add the `consensus-breaking` label if so. See
#791 for details
- [x] Bug fix
- [ ] Code health or cleanup
- [ ] Documentation
- [ ] Other (specify)

## Testing


- [x] **Unit Tests**: `make go_develop_and_test`
- [x] **LocalNet E2E Tests**: `make test_e2e`
- [ ] **DevNet E2E Tests**: Add the `devnet-test-e2e` label to the PR.

## Sanity Checklist

- [x] I have tested my changes using the available tooling
- [x] I have commented my code
- [x] I have performed a self-review of my own code; both comments &
source code
- [ ] I create and reference any new tickets, if applicable
- [x] I have left TODOs throughout the codebase, if applicable

---------

Co-authored-by: Dmitry K <okdas@pm.me>

--- a/config.yml
+++ b/config.yml
@@ -104,6 +104,20 @@ validators:
       instrumentation:
         prometheus: true
       log_level: "info"
+      # Increase the rpc and mempool max bytes to support large transactions.
+      # DEV_NOTE: These values were selected arbitrarily, but chosen to be large,
+      # as a result of load testing and seeing large proof messages during the
+      # Claim & Proof lifecycle.
+      rpc:
+        # Controls how large any single RPC request accepted by the CometBFT
+        # server (offchain) can be.
+        max_body_bytes: "100000000"
+      mempool:
+        # Control how big any single transaction accepted by the CometBFT server
+        # (offchain) can be.
+        # Since multiple messages are bundled into a single transaction,
+        # max_tx_bytes needs to be increased alongside max_txs_bytes as well.
+        max_tx_bytes: "100000000"
     client:
       chain-id: poktroll
 
