--- a/config.yml
+++ b/config.yml
@@ -229,7 +229,7 @@ genesis:
                   url: http://relayminer1:8545
               rev_share:
                 - address: pokt19a3t4yunp0dlpfjrp7qwnzwlrzd5fzs2gjaaaj
-                  rev_share_percentage: "100"
+                  rev_share_percentage: 100
             - service_id: rest
               endpoints:
                 - configs: []
@@ -237,7 +237,7 @@ genesis:
                   url: http://relayminer1:8545
               rev_share:
                 - address: pokt19a3t4yunp0dlpfjrp7qwnzwlrzd5fzs2gjaaaj
-                  rev_share_percentage: "100"
+                  rev_share_percentage: 100
             - service_id: ollama
               endpoints:
                 - configs: []
@@ -245,7 +245,7 @@ genesis:
                   url: http://relayminer1:8545
               rev_share:
                 - address: pokt19a3t4yunp0dlpfjrp7qwnzwlrzd5fzs2gjaaaj
-                  rev_share_percentage: "100"
+                  rev_share_percentage: 100
           stake:
             # NB: This value should be exactly 1upokt smaller than the value in
             # `supplier1_stake_config.yaml` so that the stake command causes a state change.
