disable accounts deletion

--- a/localnet/poktrolld/config/app.toml
+++ b/localnet/poktrolld/config/app.toml
@@ -5,6 +5,8 @@ iavl-cache-size = 781250
 iavl-disable-fastnode = false
 index-events = []
 inter-block-cache = true
+max-recv-msg-size = "1000000000000"
+max-send-msg-size = "1000000000000"
 min-retain-blocks = 0
 minimum-gas-prices = "0upokt"
 pruning = "nothing"
