--- a/load-testing/loadtest_manifest_localnet_single_supplier.yaml
+++ b/load-testing/loadtest_manifest_localnet_single_supplier.yaml
@@ -44,7 +44,7 @@ gateways:
 
   # Gateway 1; http://localhost:10350/r/gateway1/overview
   - address: pokt15vzxjqklzjtlz7lahe8z2dfe9nm5vxwwmscne4
-    exposed_url: http://localhost:3069/v1/ # The gateway url that the user sends relays to (e.g. curl)
+    exposed_url:  https://devnet-red0ne-path-1.poktroll.com/v1/ # The gateway url that the user sends relays to (e.g. curl)
 
   ## Gateway 2; http://localhost:10350/r/gateway2/overview
   #- address: pokt15w3fhfyc0lttv7r585e2ncpf6t2kl9uh8rsnyz
