--- a/proto/Dockerfile.ignite
+++ b/proto/Dockerfile.ignite
@@ -1,5 +1,7 @@
-# This Dockerfile exists to ensure Ignite OpenAPI works on all platforms.
-# It is run by the make target `make ignite_openapi_gen` which outputs to `docs/static/openapi.yml`
+# This Dockerfile exists to ensure Ignite OpenAPI works on any platforms.
+# To use it to update `docs/static/openapi.yml`, simply run:
+# $ make ignite_openapi_gen
+
 FROM golang:1.23.5
 
 # Install Ignite CLI
