--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -24,7 +24,9 @@
     "prism-react-renderer": "^2.4.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-player": "^2.16.0"
+    "react-player": "^2.16.0",
+    "swagger-ui": "^5.18.3",
+    "swagger-ui-react": "^5.18.3"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.2.1",
