--- a/config.yml
+++ b/config.yml
@@ -321,4 +321,5 @@ genesis:
         proof_window_close_offset_blocks: 4
         supplier_unbonding_period_sessions: 1
         application_unbonding_period_sessions: 1
+        gateway_unbonding_period_sessions: 1
         compute_units_to_tokens_multiplier: 42
