--- a/localnet/poktrolld/config/app.toml
+++ b/localnet/poktrolld/config/app.toml
@@ -20,10 +20,10 @@ query-gas-limit = "0"
   rpc-max-body-bytes = 1000000
   rpc-read-timeout = 10
   rpc-write-timeout = 0
-  swagger = false
+  swagger = true
 
 [grpc]
-  address = "localhost:9090"
+  address = "0.0.0.0:9090"
   enable = true
   max-recv-msg-size = "10485760"
   max-send-msg-size = "2147483647"
