--- a/localnet/poktrolld/config/relayminer_config.yaml
+++ b/localnet/poktrolld/config/relayminer_config.yaml
@@ -14,6 +14,12 @@ suppliers:
       backend_url: http://localhost:8081
       publicly_exposed_endpoints:
         - localhost
+  - service_id: anvilws
+    listen_url: http://localhost:6942
+    service_config:
+      backend_url: ws://localhost:8081
+      publicly_exposed_endpoints:
+        - localhost
 pprof:
   enabled: false
   addr: localhost:6060
