--- a/localnet/poktrolld/config/supplier1_stake_config.yaml
+++ b/localnet/poktrolld/config/supplier1_stake_config.yaml
@@ -9,6 +9,10 @@ services:
     endpoints:
       - publicly_exposed_url: http://relayminer1:8545
         rpc_type: JSON_RPC
+  - service_id: anvilws
+    endpoints:
+      - publicly_exposed_url: ws://relayminer1:8545
+        rpc_type: WEBSOCKET
   - service_id: ollama
     rev_share_percent:
       pokt1mrqt5f7qh8uxs27cjm9t7v9e74a9vvdnq5jva4: 50
