--- a/localnet/poktrolld/config/supplier2_stake_config.yaml
+++ b/localnet/poktrolld/config/supplier2_stake_config.yaml
@@ -6,6 +6,10 @@ services:
     endpoints:
       - publicly_exposed_url: http://relayminer2:8545
         rpc_type: JSON_RPC
+  - service_id: anvilws
+    endpoints:
+      - publicly_exposed_url: ws://relayminer2:8545
+        rpc_type: WEBSOCKET
   - service_id: ollama
     endpoints:
       - publicly_exposed_url: http://relayminer2:8545
