--wip-- [skip ci]

--- a/tools/relay-spam/config.yml
+++ b/tools/relay-spam/config.yml
@@ -1,4 +1,6 @@
 datadir: /Users/dk/.poktroll
+grpc_endpoint: localhost:9090
+application_fund_goal: 100000000upokt
 txflags: ""
 txflagstemplate: {}
 applications:
@@ -17,169 +19,3 @@ applications:
   stakegoal: 0
   serviceidgoal: ""
   delegateesgoal: []
-- name: relay_spam_app_2
-  address: pokt12rtqqcw5qhpu2hdaetdvpq7mynxxralt6zedqm
-  mnemonic: ceiling glimpse acid celery mosquito throw slush purchase sell charge
-    kidney material switch grit flavor silly oval cube loyal donate update shop winter
-    firm
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_3
-  address: pokt17206pew5tec4csgvaas0zktv5nlzpdey4haddw
-  mnemonic: neutral utility expect hole universe solar gasp holiday sad guard eager
-    define audit suit dish vault hub alert utility envelope bring casual ostrich explain
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_4
-  address: pokt1ur4fu5rtfemnk5dllcna67js8znl9f3y0jfj40
-  mnemonic: stuff join hair foam cluster west tool spray prison birth lion reopen
-    build slight nut liar battle autumn churn kitten leader tissue female organ
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_5
-  address: pokt1elkk6xxqc87r3tzaduswfw9pcret9lz4djx695
-  mnemonic: hazard during loyal raccoon rich cash bargain access year horse race zebra
-    stock nest target relax wisdom enact jewel fog client observe region electric
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_6
-  address: pokt1f948yuyqv2rhyhts4amyk6k6cxg9j4q5h7xfpv
-  mnemonic: hello kangaroo skirt jacket eye frost glass dose path share bottom room
-    sign client box siege battle gas beef large replace cash hockey boss
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_7
-  address: pokt18wrva0knnsta9064r3xd520qkrxxa46slykjcf
-  mnemonic: song rather green deer amused wet top expire claw sphere kit check gasp
-    desk defy route copper ski rebel merry wait glimpse ancient guess
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_8
-  address: pokt1w0m673jy20t32jgpn8588q9yyjfc9de22vfl07
-  mnemonic: pigeon spice extend group glide position gorilla unfold audit leader brick
-    clever flight bitter member drip ask gate dumb shop vehicle desert betray fun
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_9
-  address: pokt1ku37m6mvvksn8urfg59g3vjed2gft3w5eucgka
-  mnemonic: permit lunch hour hungry broken example above loyal cover teach luxury
-    garbage mercy patch tube tilt angry where speed mass crisp good snack banana
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_10
-  address: pokt1kyw4n28jdpt4m6t9vv97h2xe7cgqfcg3ng5zxq
-  mnemonic: defy panda art warm sweet alert photo system peasant purpose naive try
-    maid coconut leaf captain have trash plug cancel hammer case guess combine
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_11
-  address: pokt1y0eztavujr3t6jtc9ghaz3p97vs5fkahnmnfan
-  mnemonic: razor twenty increase winner pistol essence glad scrap jealous unknown
-    civil confirm charge wall food give ordinary awkward gloom harsh crowd client
-    crystal crush
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_12
-  address: pokt1q8hvheesrljymh208s3p39wzc6flu7e42ad4dp
-  mnemonic: scare simple era february away point shine seven guess charge decline
-    burger true tackle finger supply stairs assume innocent aspect volcano guide warrior
-    mean
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_13
-  address: pokt1gqfc4uha4ntc7cucqah0cr3wnsq87f77v8g6zv
-  mnemonic: pattern reveal stereo soda pigeon unknown cause arrange among race potato
-    just bike donate grape ride fish seat hurt romance evidence liberty glass stable
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_14
-  address: pokt1vdqfmnyul40v2fhqu6hhpz0gznzwarvx6hs406
-  mnemonic: cool thought follow path jealous arctic inside proud catalog grant fortune
-    nephew lend core winter spirit crisp slow elite wink slim palace tenant rug
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_15
-  address: pokt1dwp6ld82qwed7lsh80nzaz9xf987lhcv03y0yq
-  mnemonic: awful audit kitchen story diesel manual give cloth reform engage leader
-    focus simple old kangaroo amateur box bamboo abstract victory about coach final
-    army
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_16
-  address: pokt1usduf6pc8vnk8sge0zmjwt3dj4xjxfae7c3fsl
-  mnemonic: found drip scrap price torch cause depth bargain future search maximum
-    slide double panel person catalog flat cancel then inner lady rather junk trash
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_17
-  address: pokt1l7q257tgjwny4907m09jlr9e2dmt223wfyw6qs
-  mnemonic: beauty genius arrow lamp saddle stumble reward foster field neutral discover
-    hill milk fitness burst upgrade blur weather mobile leisure thing where problem
-    under
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_18
-  address: pokt1l4uawssvfgguwtynlzyl0fvhfufmzpqf0l0rrg
-  mnemonic: decrease pill check grid puzzle protect multiply damp collect brass almost
-    season weather response supply elder team camp wonder rhythm vivid truth grow
-    rifle
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_19
-  address: pokt17g6qpu2jgskyjnaklxz7cxrzkntn5nsa6d6q4m
-  mnemonic: need busy talent collect manage vanish orient remember game tree alarm
-    casino morning spend analyst acquire physical aspect slight north museum chunk
-    beauty reward
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_20
-  address: pokt1ugfzppl0c5hg5j98vykafdt7cy6xpwdecd5d9a
-  mnemonic: scare enemy state only tissue unveil before divert degree wisdom electric
-    addict unfair ticket time will thunder october creek bicycle whisper innocent
-    coffee decade
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_21
-  address: pokt1073038ax843fcft5p58hrfps3gg0e7v4jjd0y0
-  mnemonic: fury impact vivid arctic drink luxury chat slush remain poem duck you
-    manual dizzy release upgrade junk pumpkin priority phone world cup knife update
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_22
-  address: pokt10njmpnqw6px423ec3rd4kdzanheawy80fh2un9
-  mnemonic: cool impact indoor address roast apart stable about initial upper feel
-    sausage abuse bomb keep horn vital pizza bus solve vocal nasty twelve enact
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-- name: relay_spam_app_23
-  address: pokt1h9ss9hkmthetz3zcpm2cd3kld2rj7p8drgynfy
-  mnemonic: zebra cover absorb march toe pause any game lion dry cheese stove heart
-    cabbage mind oval life negative forget gift crash finger acid brief
-  stakegoal: 0
-  serviceidgoal: ""
-  delegateesgoal: []
-applicationdefaults:
-  stake: ""
-  serviceid: ""
-  gateways: []
