--- a/.gitignore
+++ b/.gitignore
@@ -107,5 +107,5 @@ relayminer_config.yaml
 gateway_config.yaml
 path_config.yaml
 
-# vultr
+# vultr files created during creation and deletion of new instances that may contain sensitive information
 vultr_*.json
