--- a/localnet/kubernetes/values-relayminer-1.yaml
+++ b/localnet/kubernetes/values-relayminer-1.yaml
@@ -4,28 +4,4 @@ config:
   signing_key_name: supplier1
 
   default_signing_key_names: [supplier1]
-  suppliers:
-    - service_id: anvil
-      listen_url: http://0.0.0.0:8545
-      service_config:
-        backend_url: http://anvil:8547/
-        publicly_exposed_endpoints:
-          - relayminer1
-    - service_id: anvilws
-      listen_url: http://0.0.0.0:8545
-      service_config:
-        backend_url: ws://anvil:8547/
-        publicly_exposed_endpoints:
-          - relayminer1
-    - service_id: ollama
-      listen_url: http://0.0.0.0:8545
-      service_config:
-        backend_url: http://ollama:11434/
-        publicly_exposed_endpoints:
-          - relayminer1
-    - service_id: rest
-      listen_url: http://0.0.0.0:8545
-      service_config:
-        backend_url: http://rest:10000/
-        publicly_exposed_endpoints:
-          - relayminer1
+  suppliers: [] # suppliers list is dynamically defined in poktroll/Tiltfile.
