--- a/localnet/kubernetes/values-relayminer-3.yaml
+++ b/localnet/kubernetes/values-relayminer-3.yaml
@@ -4,22 +4,4 @@ config:
   signing_key_name: supplier3
 
   default_signing_key_names: [supplier3]
-  suppliers:
-    - service_id: anvil
-      listen_url: http://0.0.0.0:8545
-      service_config:
-        backend_url: http://anvil:8547/
-        publicly_exposed_endpoints:
-          - relayminer3
-    - service_id: anvilws
-      listen_url: http://0.0.0.0:8545
-      service_config:
-        backend_url: ws://anvil:8547/
-        publicly_exposed_endpoints:
-          - relayminer1
-    - service_id: ollama
-      listen_url: http://0.0.0.0:8545
-      service_config:
-        backend_url: http://ollama:11434/
-        publicly_exposed_endpoints:
-          - relayminer3
+  suppliers: [] # suppliers list is dynamically defined in poktroll/Tiltfile.
