--- a/localnet/kubernetes/values-relayminer-common.yaml
+++ b/localnet/kubernetes/values-relayminer-common.yaml
@@ -14,3 +14,7 @@ config:
   ping:
     enabled: true
     addr: localhost:8081
+  forward:
+    enabled: true
+    addr: localhost:10000
+    token: 8cc09793290cd64d8a9bc80eaae4fbeef5f7cf797b0c70e078d2a5b81d74f12c
