[Review] Review of #1092 for Full Node Snapshots (#1125)
## Summary

- Reviewed #1092

### Primary Changes
- Updated & tested the `full node walkthrough`
- Add a `vultr.md` to streamline creating and tearing down **Vultr**
instances

### Secondary Changes
- Added a `.markdownlint.json`
- Updated titles & headers in a few places to clean things up

## Type of change

Select one or more from the following:

- [ ] New feature, functionality or library
- [ ] Consensus breaking; add the `consensus-breaking` label if so. See
#791 for details
- [ ] Bug fix
- [ ] Code health or cleanup
- [x] Documentation
- [ ] Other (specify)

---------

Co-authored-by: Dima K. <okdas@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,6 @@ tmp/*
 relayminer_config.yaml
 gateway_config.yaml
 path_config.yaml
+
+# vultr files created during creation and deletion of new instances that may contain sensitive information
+vultr_*.json
