[Container image] Enhance Docker Image Build Pipeline with Multiple Trigger Options (#1128)
- **Tag-based builds**: Triggered automatically when a version tag
(`v*..`) is pushed, producing versioned production images
- **Main branch builds**: Triggered automatically on pushes to the main
branch, creating `main-prod` tagged images
- **Manual builds**: Triggered on-demand via `workflow_dispatch` with
optional custom tag support
- **Platform support**: All build options generate images for both
`linux/amd64` and `linux/arm64` architectures
- **Consistent image format**: All builds use the production-ready
`Dockerfile.release` configuration

--- a/.github/workflows/release-artifacts.yml
+++ b/.github/workflows/release-artifacts.yml
@@ -4,6 +4,14 @@ on:
   push:
     tags:
       - "v*.*.*"
+    branches:
+      - "main"
+  workflow_dispatch:
+    inputs:
+      custom_tag:
+        description: "Optional custom tag to add to the image (will be prefixed with branch name)"
+        type: string
+        required: false
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
@@ -46,8 +54,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Docker Metadata action
-        id: meta
+      # For version tag pushes
+      - name: Docker Metadata action for tag events
+        id: meta-tag
+        if: startsWith(github.ref, 'refs/tags/v')
         uses: docker/metadata-action@v5
         env:
           DOCKER_METADATA_PR_HEAD_SHA: "true"
@@ -61,6 +71,40 @@ jobs:
             type=sha,suffix=-prod
             type=sha,format=long,suffix=-prod
 
+      # For main branch pushes
+      - name: Docker Metadata action for main branch pushes
+        id: meta-main
+        if: github.ref == 'refs/heads/main' && github.event_name != 'workflow_dispatch'
+        uses: docker/metadata-action@v5
+        env:
+          DOCKER_METADATA_PR_HEAD_SHA: "true"
+        with:
+          images: |
+            ghcr.io/pokt-network/poktrolld
+          tags: |
+            type=raw,value=main-prod
+            type=sha,suffix=-main-prod
+            type=sha,format=long,suffix=-main-prod
+
+      # For manual workflow triggers
+      - name: Extract branch name
+        if: github.event_name == 'workflow_dispatch'
+        shell: bash
+        run: echo "BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
+
+      - name: Docker Metadata action for manual workflow_dispatch
+        id: meta-manual
+        if: github.event_name == 'workflow_dispatch'
+        uses: docker/metadata-action@v5
+        env:
+          DOCKER_METADATA_PR_HEAD_SHA: "true"
+        with:
+          images: |
+            ghcr.io/pokt-network/poktrolld
+          tags: |
+            type=raw,value=${{ env.BRANCH_NAME }}-prod${{ github.inputs.custom_tag != '' && format('-{0}', github.inputs.custom_tag) || '' }}
+            type=sha,suffix=-${{ env.BRANCH_NAME }}-prod${{ github.inputs.custom_tag != '' && format('-{0}', github.inputs.custom_tag) || '' }}
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -68,20 +112,51 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push Docker image
+      # For version tag pushes
+      - name: Build and push Docker image for tag events
+        if: startsWith(github.ref, 'refs/tags/v')
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: ${{ steps.meta-tag.outputs.tags }}
+          labels: ${{ steps.meta-tag.outputs.labels }}
           platforms: linux/amd64,linux/arm64
           file: Dockerfile.release
           cache-from: type=gha
           cache-to: type=gha,mode=max
           context: .
 
-      # TODO_TECHDEBT(@okdas): use for releases (also change the "on" part at the top so it only tgirrered for tags/releases)
+      # For main branch pushes
+      - name: Build and push Docker image for main branch
+        if: github.ref == 'refs/heads/main' && github.event_name != 'workflow_dispatch'
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: ${{ steps.meta-main.outputs.tags }}
+          labels: ${{ steps.meta-main.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
+          file: Dockerfile.release
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          context: .
+
+      # For manual workflow triggers
+      - name: Build and push Docker image for manual workflow_dispatch
+        if: github.event_name == 'workflow_dispatch'
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: ${{ steps.meta-manual.outputs.tags }}
+          labels: ${{ steps.meta-manual.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
+          file: Dockerfile.release
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          context: .
+
+      # Only publish GitHub releases for tag events
       - name: Add release and publish binaries
+        if: startsWith(github.ref, 'refs/tags/v')
         uses: softprops/action-gh-release@v2
         with:
           files: |
