--- a/docusaurus/package.json
+++ b/docusaurus/package.json
@@ -20,6 +20,7 @@
     "@docusaurus/theme-mermaid": "^3.2.1",
     "@easyops-cn/docusaurus-search-local": "^0.40.1",
     "@mdx-js/react": "^3.0.0",
+    "@panzoom/panzoom": "^4.6.0",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.4.0",
     "react": "^18.0.0",
